# emg-gestures

./: .gitignore  README.md  env.yml  pyproject.toml
notebooks/: emg-for-students.ipynb  preperation-exploration.ipynb
